--- a/src/styles/SearchPage.module.scss
+++ b/src/styles/SearchPage.module.scss
@@ -3,8 +3,7 @@
 	display: flex;
 	flex: 1;
 	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+	width: 100%;
 
 	@media (min-width: 640px) {
 		max-width: 640px;
