--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -1,7 +1,17 @@
-.container {
+.container, .no_logo {
 	display: flex;
 	justify-content: center;
+	max-height: 24px;
+	margin-bottom: 20px;
+}
 
+.container {
+	@media (min-width: 400px) {
+		justify-content: space-between;
+	}
+}
+
+.no_logo {
 	@media (min-width: 400px) {
 		justify-content: end;
 	}
@@ -12,4 +22,9 @@
 	justify-content: space-between;
 	align-items: center;
 	gap: 0.5rem;
+}
+
+.logo__wrapper {
+	display: flex;
+	align-items: center;
 }
