--- a/src/styles/HomePage.module.scss
+++ b/src/styles/HomePage.module.scss
@@ -1,30 +1,7 @@
+@import 'layout';
+
 .container {
-	margin-inline: auto;
-	display: flex;
-	flex: 1;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-
-	@media (min-width: 640px) {
-		max-width: 640px;
-	}
-
-	@media (min-width: 768px) {
-		max-width: 768px;
-	}
-
-	@media (min-width: 1024px) {
-		max-width: 1024px;
-	}
-
-	@media (min-width: 1280px) {
-		max-width: 1280px;
-	}
-
-	@media (min-width: 1536px) {
-		max-width: 1536px;
-	}
+	@extend .base__container;
 }
 
 .logo__wrapper {
@@ -32,9 +9,8 @@
 	justify-content: center;
 	align-items: center;
 	margin-bottom: 1rem;
-    	position: relative;
+	position: relative;
 }
-
 
 .main__container {
 	width: 100%;
