--- a/src/styles/AboutPage.module.scss
+++ b/src/styles/AboutPage.module.scss
@@ -50,7 +50,7 @@
 		justify-content: space-evenly;
 		flex-wrap: wrap;
 		gap: 1rem;
-
+		border-radius: 50% !important;
 		margin-top: 2rem;
 	}
 }
