--- a/src/components/pages/about/member-portrait/MemberPortrait.module.scss
+++ b/src/components/pages/about/member-portrait/MemberPortrait.module.scss
@@ -10,7 +10,7 @@
         position: absolute;
         top: 40px;
         left: 40px;
-        color: #ffffff;
+        color: white;
         width: 48px;
         height: 48px;
         opacity: 0;
