--- a/src/components/common/percentage-bar/PercentageBar.module.scss
+++ b/src/components/common/percentage-bar/PercentageBar.module.scss
@@ -1,5 +1,7 @@
+@import '../../../styles/colors';
+
 .container {
-	background-color: #b1b1b1;
+	background-color: $Gray;
 	height: 1.25rem;
 	width: 100%;
 	border-radius: 9999px;
