--- a/src/components/pages/details/tag/Tag.module.scss
+++ b/src/components/pages/details/tag/Tag.module.scss
@@ -1,8 +1,10 @@
+@import '../../../../styles/colors';
+
 .container {
 	padding-inline: 0.5rem;
 	padding-block: 0.125rem;
 	border-radius: 2rem;
-	background-color: #b1b1b1;
+	background-color: $Gray;
 	word-break: break-all;
 	height: fit-content;
 	text-align: center;
