--- a/src/styles/HelpPage.module.scss
+++ b/src/styles/HelpPage.module.scss
@@ -25,7 +25,7 @@
 		gap: 1.125rem;
 		margin-block: 1.375rem;
 
-		color: $darkGray;
+		color: $DarkGray;
 	}
 }
 
@@ -42,7 +42,7 @@
 		gap: 1.125rem;
 		margin-block: 1.375rem;
 
-		color: $darkGray;
+		color: $DarkGray;
 		font-size: 2.25rem;
 	}
 
