--- a/src/components/layout/horizontal-divider/HorizontalDivider.module.scss
+++ b/src/components/layout/horizontal-divider/HorizontalDivider.module.scss
@@ -11,6 +11,6 @@
 	border: none;
 	height: 1px;
 	width: 35%;
-	color: $DarkGray;
-	background-color: $DarkGray;
+	color: $dark-gray;
+	background-color: $dark-gray;
 }
