--- a/src/components/pages/details/tag/Tag.module.scss
+++ b/src/components/pages/details/tag/Tag.module.scss
@@ -4,7 +4,7 @@
 	padding-inline: 0.5rem;
 	padding-block: 0.125rem;
 	border-radius: 2rem;
-	background-color: $Gray;
+	background-color: $gray;
 	word-break: break-all;
 	height: fit-content;
 	text-align: center;
