--- a/src/components/pages/search/answer-card/AnswerCard.module.scss
+++ b/src/components/pages/search/answer-card/AnswerCard.module.scss
@@ -21,7 +21,7 @@
 	gap: 0.5rem;
 	flex-wrap: wrap;
 
-	color: $DarkGray;
+	color: $dark-gray;
 
 	.description {
 		word-break: break-all;
@@ -34,7 +34,7 @@
 	flex-wrap: wrap;
 	gap: 0.5rem;
 
-	color: $DarkGray;
+	color: $dark-gray;
 }
 
 .match__container {
