--- a/src/components/common/card/Card.module.scss
+++ b/src/components/common/card/Card.module.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/colors';
 
 .container {
-	background-color: $LightGray;
+	background-color: $light-gray;
 	border-radius: 1rem;
 	padding-inline: 2.25rem;
 	padding-block: 1.5rem;
