--- a/src/components/common/link-image/LinkImage.module.scss
+++ b/src/components/common/link-image/LinkImage.module.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/constants';
+
 .container {
 	display: flex;
 	flex-direction: column;
@@ -8,11 +10,10 @@
 	-moz-transition: all 0.5s ease-out;
 	-o-transition: all 0.5s ease-out;
 	transition: all 0.5s ease-out;
-	filter: brightness(100%);
 }
 
 .container:hover {
-	filter: brightness(70%);
+	filter: $brightness-transition;
 }
 
 .figure__caption {
