--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,5 +1,5 @@
-$DarkGray: #6f6f6f;
-$Gray: #b1b1b1;
-$LightGray: #c6c6c6;
-$Highlight: #83a5ff;
-$Outline: #334155;
+$dark-gray: #6f6f6f;
+$gray: #b1b1b1;
+$light-gray: #c6c6c6;
+$highlight: #83a5ff;
+$outline: #334155;
