--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -1,7 +1,6 @@
 .container, .no_logo {
 	display: flex;
-	max-height: 24px;
-	margin-bottom: 20px;
+	max-height: 36px;
 }
 
 .container {
@@ -19,7 +18,7 @@
 	gap: 0.5rem;
 }
 
-.logo__wrapper {
+.logo_wrapper {
 	display: flex;
 	align-items: center;
 	min-height: 36px;
